Fixing a wrong font size and ordered list on customers page. Added new Google Tag.

--- a/public/static/css/modules/ModCustomers/partials/_customer_story.scss
+++ b/public/static/css/modules/ModCustomers/partials/_customer_story.scss
@@ -91,7 +91,7 @@
       line-height: 1.8;
     }
     
-    ul {
+    ul.list {
         
         li {
             margin-left: 50px;
